New provider structure. Added new constants and removed CONST_ prefix from old ones. Solved double async thread launch at brainless startup. Added more descriptive fields to account authentication properties.  iCloud and Doist data sync, unstable
