# brainless/swagger/swagger.yaml
@@ -97,6 +97,12 @@ paths:
                   type: string
                 client_secret:
                   type: string
+                username:
+                  type: string
+                password:
+                  type: string
+                api_token:
+                  type: string
       x-swagger-router-controller: "controllers"
     put:
       operationId: "accounts.update"
@@ -134,6 +140,12 @@ paths:
                 type: string
               client_secret:
                 type: string
+              username:
+                type: string
+              password:
+                type: string
+              api_token:
+                type: string
       responses:
         201:
           description: "Successfully updated the account"
@@ -151,6 +163,12 @@ paths:
               client_id:
                 type: string
               client_secret:
+                type: string
+              username:
+                type: string
+              password:
+                type: string
+              api_token:
                 type: string
       x-swagger-router-controller: "controllers"
     delete:
@@ -204,6 +222,12 @@ paths:
                   type: string
                 client_secret:
                   type: string
+                username:
+                  type: string
+                password:
+                  type: string
+                api_token:
+                  type: string
       x-swagger-router-controller: "controllers"
     post:
       operationId: "accounts.create"
@@ -236,6 +260,12 @@ paths:
                 type: string
               client_secret:
                 type: string
+              username:
+                type: string
+              password:
+                type: string
+              api_token:
+                type: string
       responses:
         201:
           description: "Successfully created the account"
@@ -255,6 +285,12 @@ paths:
               client_id:
                 type: string
               client_secret:
+                type: string
+              username:
+                type: string
+              password:
+                type: string
+              api_token:
                 type: string
       x-swagger-router-controller: "controllers"
 ###############################################################################################################################
